--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "async": "^2.6.1",
     "axios": "^0.18.0",
+    "babel": "^6.23.0",
     "body-parser": "^1.18.3",
     "connect-history-api-fallback": "^1.5.0",
     "cors": "^2.8.5",
@@ -24,7 +25,6 @@
     "moment": "^2.22.2",
     "morgan": "^1.9.1",
     "multiparty": "^4.2.1",
-    "node-sass": "^4.9.3",
     "sass-loader": "^7.1.0",
     "tracer": "^0.9.2",
     "vue": "^2.6.10",
@@ -32,6 +32,7 @@
     "vue-router": "^3.0.1",
     "vue-server-renderer": "^2.6.10",
     "vue-slider-component": "^2.7.7",
+    "vuetify": "^2.2.15",
     "vuex": "^3.0.1",
     "webpack-merge": "^4.1.4",
     "weekstart": "^1.0.0"
@@ -42,7 +43,9 @@
     "not ie <= 8"
   ],
   "devDependencies": {
+    "@babel/core": "^7.8.6",
     "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/preset-env": "^7.8.6",
     "babel-core": "^6.26.3",
     "babel-eslint": "^7.0.0",
     "babel-loader": "^7.1.5",
