--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.22.2",
     "morgan": "^1.9.1",
     "multiparty": "^4.2.1",
+    "node-sass": "^4.13.1",
     "sass-loader": "^7.1.0",
     "tracer": "^0.9.2",
     "vue": "^2.6.10",
