--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "morgan": "^1.9.1",
     "multiparty": "^4.2.1",
     "node-sass": "^4.13.1",
+    "page": "^1.7.1",
     "sass-loader": "^7.1.0",
     "tracer": "^0.9.2",
     "vue": "^2.6.10",
@@ -61,6 +62,7 @@
     "babel-register": "^6.0.0",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
+    "eslint-config-vuetify": "^0.5.0",
     "file-loader": "^1.1.4",
     "vue-loader": "^13.7.3",
     "vue-template-compiler": "^2.6.10",
