--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "sass-loader": "^7.1.0",
     "tracer": "^0.9.2",
     "vue": "^2.6.10",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-loading-overlay": "^3.0.1",
     "vue-router": "^3.0.1",
     "vue-server-renderer": "^2.6.10",
