--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel": "^6.23.0",
     "body-parser": "^1.18.3",
     "connect-history-api-fallback": "^1.5.0",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "crypto-js": "^3.1.9-1",
     "es6-promise": "^4.2.4",
@@ -31,6 +32,7 @@
     "tracer": "^0.9.2",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-cookies": "^1.7.0",
     "vue-loading-overlay": "^3.0.1",
     "vue-router": "^3.0.1",
     "vue-server-renderer": "^2.6.10",
